--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 }
 
 main{
-   background: url(/images/background.svg);
+   background: url(images/background.svg);
    width: 375px;
    height: 812px;
 }
